--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<main>
 		<section class="carousel-container">
 			<div class="carousel-item-wrapper">
-				<div class="carousel-item item1 active"></div>
+				<div class="carousel-item item1"></div>
 				<div class="carousel-item item2"></div>
 				<div class="carousel-item item3"></div>
 			</div>
@@ -44,6 +44,12 @@
 				<button type="button" class="prev-btn">&lt;</button>
 				<button type="button" class="next-btn">&gt;</button>
 			</div>
+
+			<ul class="pagination"></ul>
+		</section>
+
+		<section>
+			<div>테스트</div>
 		</section>
 	</main>
 </body>
