--- a/index.html
+++ b/index.html
@@ -217,86 +217,86 @@
             </div>
         </section> -->
 
-		<!-- <section class="masonry__container">
+		<section class="masonry__container">
 			<div class="masonry">
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/windmill.jpg" alt="A windmill" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/suspension-bridge.jpg"
 						alt="The Clifton Suspension Bridge" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/sunset.jpg"
 						alt="Sunset and boats" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/snowy.jpg"
 						alt="a river in the snow" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/bristol-balloons1.jpg"
 						alt="a single checked balloon" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/dog-balloon.jpg"
 						alt="a hot air balloon shaped like a dog" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/abq-balloons.jpg"
 						alt="View from a hot air balloon of other balloons" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/disney-balloon.jpg"
 						alt="a balloon fairground ride" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/bristol-harbor.jpg"
 						alt="sunrise over a harbor" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/bristol-balloons2.jpg"
 						alt="three hot air balloons in a blue sky" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="https://assets.codepen.io/12005/toronto.jpg"
 						alt="the Toronto light up sign at night" />
-					<figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
-							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption>
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 			</div>
-		</section> -->
+		</section>
 	</main>
 </body>
 
