슬라이더 다음/이전 버튼 부적절한 동작 제거 및 masonry 레이아웃 추가(masonry 꺠지는거 수정)

--- a/index.html
+++ b/index.html
@@ -220,76 +220,77 @@
 		<section class="masonry__container">
 			<div class="masonry">
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/windmill.jpg" alt="A windmill" />
+					<img class="masonry__image" src="images/masonry/masonry1.png" alt="A windmill" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/suspension-bridge.jpg"
-						alt="The Clifton Suspension Bridge" />
+					<img class="masonry__image" src="images/masonry/masonry2.png" alt="The Clifton Suspension Bridge" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/sunset.jpg"
-						alt="Sunset and boats" />
+					<img class="masonry__image" src="images/masonry/masonry3.png" alt="Sunset and boats" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/snowy.jpg"
-						alt="a river in the snow" />
+					<img class="masonry__image" src="images/masonry/masonry4.png" alt="a river in the snow" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/bristol-balloons1.jpg"
-						alt="a single checked balloon" />
+					<img class="masonry__image" src="images/masonry/masonry5.png" alt="a single checked balloon" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/dog-balloon.jpg"
+					<img class="masonry__image" src="images/masonry/masonry6.png"
 						alt="a hot air balloon shaped like a dog" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/abq-balloons.jpg"
+					<img class="masonry__image" src="images/masonry/masonry7.png"
 						alt="View from a hot air balloon of other balloons" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/disney-balloon.jpg"
-						alt="a balloon fairground ride" />
+					<img class="masonry__image" src="images/masonry/masonry8.png" alt="a balloon fairground ride" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/bristol-harbor.jpg"
-						alt="sunrise over a harbor" />
+					<img class="masonry__image" src="images/masonry/masonry9.png" alt="sunrise over a harbor" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/bristol-balloons2.jpg"
+					<img class="masonry__image" src="images/masonry/masonry10.png"
 						alt="three hot air balloons in a blue sky" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
 							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
 				</figure>
 				<figure class="masonry__item">
-					<img class="masonry__image" src="https://assets.codepen.io/12005/toronto.jpg"
+					<img class="masonry__image" src="images/masonry/masonry11.png"
+						alt="the Toronto light up sign at night" />
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
+				</figure>
+				<figure class="masonry__item">
+					<img class="masonry__image" src="images/masonry/masonry12.png"
 						alt="the Toronto light up sign at night" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
