touch 슬라이드 완성 및 프로젝트완성

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 	<title>반응형 웹앱(연습 사이트)</title>
 	<link rel="stylesheet" type="text/css" href="index.css" />
-	<script type="text/javascript" src="index.js" defer></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
 		integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
 		crossorigin="anonymous" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"
+		integrity="sha512-UXumZrZNiOwnTcZSHLOfcTs0aos2MzBWHXOHOuB0J/R44QB0dwY5JgfbvljXcklVf65Gc4El6RjZ+lnwd2az2g=="
+		crossorigin="anonymous" defer></script>
+	<script type="text/javascript" src="index.js" defer></script>
 </head>
 
 <body>
@@ -168,33 +171,44 @@
 			</div>
 		</section>
 
-		<!-- <section class="touch__section">
-			<div class="touch__slider">
-				<div class="touch__slider__inner">
-					<div class="slide__img">
-						<i class="fas fa-futbol"></i>
-					</div>
-					<div class="slide__img">
-						<i class="fas fa-football-ball"></i>
-					</div>
-					<div class="slide__img">
-						<i class="fas fa-golf-ball"></i>
-					</div>
-					<div class="slide__img">
-						<i class="fas fa-biking"></i>
-					</div>
-					<div class="slide__img">
-						<i class="fas fa-basketball-ball"></i>
-					</div>
-					<div class="slide__img">
-						<i class="fas fa-hockey-puck"></i>
-					</div>
-					<div class="slide__img">
-						<i class="fas fa-swimmer"></i>
+		<section>
+			<div class="touch__section">
+				<div class="touch__slider">
+					<div class="touch__slider__inner">
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
+						<div class="slide__img">
+							<img />
+						</div>
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<section class="masonry__container">
 			<div class="masonry">
@@ -270,6 +284,27 @@
 				</figure>
 				<figure class="masonry__item">
 					<img class="masonry__image" src="images/masonry/masonry12.png"
+						alt="the Toronto light up sign at night" />
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
+				</figure>
+				<figure class="masonry__item">
+					<img class="masonry__image" src="images/masonry/masonry13.png"
+						alt="the Toronto light up sign at night" />
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
+				</figure>
+				<figure class="masonry__item">
+					<img class="masonry__image" src="images/masonry/masonry14.png"
+						alt="the Toronto light up sign at night" />
+					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
+							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
+							hic debitis dolor quasi at voluptatum beatae, provident eius.</a></figcaption> -->
+				</figure>
+				<figure class="masonry__item">
+					<img class="masonry__image" src="images/masonry/masonry15.png"
 						alt="the Toronto light up sign at night" />
 					<!-- <figcaption><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque quisquam
 							nihil dignissimos temporibus voluptas magni minima sapiente accusantium sint quos placeat
